# pre-commit-hooks

./: .pre-commit-hooks.yaml  README.md  package.json  pyproject.toml
config/: ruff.toml
